--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dmenu"]
 	path = dmenu
 	url = https://github.com/massimopavoni/dmenu
+[submodule "slock"]
+	path = slock
+	url = https://github.com/massimopavoni/slock
