Updated modules + new (slstatus)

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "slock"]
 	path = slock
 	url = https://github.com/massimopavoni/slock
+[submodule "slstatus"]
+	path = slstatus
+	url = https://github.com/massimopavoni/slstatus
