--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "slstatus"]
 	path = slstatus
 	url = https://github.com/massimopavoni/slstatus
+[submodule "dwmblocks"]
+	path = dwmblocks
+	url = https://github.com/massimopavoni/dwmblocks
